chore(git): add var to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+var/
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,go,goland,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,go,goland,git
 
